fix dark mode and chart date bug

--- a/src/global.css
+++ b/src/global.css
@@ -50,7 +50,7 @@
     gap: 1.5rem;
 }
 .p-menubar {
-    background-color: var(--background-color) !important;
+    background-color: #2c3e50 !important;
     border: none !important;
     border-radius: 4px;
 }
@@ -59,19 +59,32 @@
     border-radius: 8px;
     color: var(--text-color);
 }
-
+.p-menubar-mobile {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+}
+.p-menubar-button {
+    display: flex;
+    background-color: var(--input-background) !important;
+    color: var(--text-color) !important;
+}
 .language-select {
     margin: 1rem 0 1rem 1rem;
     padding: 0.5rem 1rem;
-    border: 1px solid var(--border-color);
-    border-radius: 8px;
-    font-size: 1rem;
-    background-color: var(--input-background);
-    color: var(--text-color);
-    cursor: pointer;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease;
-    max-width: 180px;
+}
+
+.p-select,
+.p-inputtext,
+.p-datepicker,
+.p-multiselect{
+    background-color: var(--input-background) !important;
+    color: var(--text-color) !important;
+}
+
+.p-select-label,
+.p-multiselect-label{
+    color: var(--text-color) !important;
 }
 
 .language-select:hover {
@@ -166,15 +179,7 @@ label {
     margin-bottom: 0.5rem;
 }
 
-.datepicker,
-.input-amount,
-.select-currency {
-    font-size: 1rem;
-    border-radius: 8px;
-    width: 100%;
-    background-color: var(--input-background);
-    transition: all 0.3s ease;
-}
+
 
 .datepicker:focus,
 .input-amount:focus,
